fix(trigger content): update content alignment in trigger #47
The scope of this commit is to update the treatment of content
in the trigger slot of the accordion. This solution will provide
an initial opinion of alignment while allowing users to customize
the space per their specific content needs.

Changes to be committed:
modified:   demo/index.html
modified:   src/auro-accordion.js
modified:   src/style.scss

--- a/src/style.scss
+++ b/src/style.scss
@@ -73,7 +73,21 @@
   justify-content: space-between;
 }
 
+.triggerContent {
+  width: 100%;
+  padding-right: var(--auro-size-md);
+}
+
+// Applies initial opinion about content alignment
+// Users have total control over slotted content and styling
+// User styles in the light DOM will over-ride this opinion if needed
+.trigger::slotted(*) {
+  display: flex;
+  align-items: center;
+}
+
 .subTrigger {
+  display: block;
   font-size: var(--auro-text-body-size-default);
   font-weight: var(--auro-text-heading-display-weight);
 }
